* update professional page

--- a/misc-fr.html
+++ b/misc-fr.html
@@ -30,7 +30,7 @@
 
     <div id="header">
       <h1>Jean-Christophe Bach</h1>
-      <h4>Doctorant - Équipe <a href="http://www.loria.fr/la-recherche/equipes/pareo?set_language=fr">Pareo</a> - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.loria.fr">LORIA</a> / <a href="http://www.univ-lorraine.fr">Universit&eacute; de Lorraine</a> : <a href="http://info-fst.dep.univ-lorraine.fr">département informatique</a> de la <a href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">FST</a></h4>
+      <h4>ATER - Équipe <a href="http://rmod.lille.inria.fr/">RMoD</a> - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.lifl.fr/">LIFL</a> / <a href="http://www.univ-lille1.fr/">Universit&eacute de Lille 1</a>: <a href="http://fil.univ-lille1.fr/">FIL</a>, département informatique de l'UFR <a href="http://ieea.univ-lille1.fr/">IEEA</a></h4>
       <ul id="menu">
         <li><a id="home_menu" href="./index-fr.html">accueil</a></li>
         <li><a id="research_menu" href="./research-fr.html">recherche</a></li>
