--- a/misc.html
+++ b/misc.html
@@ -30,7 +30,7 @@
 
     <div id="header">
       <h1>Jean-Christophe Bach</h1>
-      <h4>PhD student - <a href="http://www.loria.fr/la-recherche-en/equipes/pareo">Pareo</a> Team - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.loria.fr">LORIA</a> / <a href="http://www.univ-lorraine.fr">Universit&eacute; de Lorraine</a>: <a href="http://info-fst.dep.univ-lorraine.fr">Computer Science Department</a> of <a href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">FST</a></h4>
+      <h4>Teaching assistant - <a href="http://rmod.lille.inria.fr/">RMoD</a> Team - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.lifl.fr/">LIFL</a> / <a href="http://www.univ-lille1.fr/">University of Lille 1</a>: <a href="http://fil.univ-lille1.fr/">FIL</a>, Computer Science department of <a href="http://ieea.univ-lille1.fr/">IEEA</a></h4>
       <ul id="menu">
         <li><a id="home_menu" href="./index.html">home</a></li>
         <li><a id="research_menu" href="./research.html">research</a></li>
