--- a/research-fr.html
+++ b/research-fr.html
@@ -30,7 +30,7 @@
 
     <div id="header">
     <h1>Jean-Christophe Bach</h1>
-      <h4>Doctorant - Équipe <a href="http://www.loria.fr/la-recherche/equipes/pareo?set_language=fr">Pareo</a> - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.loria.fr">LORIA</a> / <a href="http://www.univ-lorraine.fr">Universit&eacute; de Lorraine</a> : <a href="http://info-fst.dep.univ-lorraine.fr">département informatique</a> de la <a href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">FST</a></h4>
+      <h4>ATER - Équipe <a href="http://rmod.lille.inria.fr/">RMoD</a> - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.lifl.fr/">LIFL</a> / <a href="http://www.univ-lille1.fr/">Universit&eacute de Lille 1</a>: <a href="http://fil.univ-lille1.fr/">FIL</a>, département informatique de l'UFR <a href="http://ieea.univ-lille1.fr/">IEEA</a></h4>
       <ul id="menu">
         <li><a id="home_menu" href="./index-fr.html">accueil</a></li>
         <li><a id="research_menu" href="./research-fr.html">recherche</a></li>
@@ -40,14 +40,36 @@
       </ul>
     </div>
 
+    <h3>Thèmes d'intérêt</h3>
+    
+    <p>
+    <ul>
+      <li>Ingénierie du logiciel</li>
+      <li>Langages</li>
+      <li>Transformations</li>
+      <ul>
+        <li>de langages</li>
+        <li>qualifiables</li>
+        <li>de modèles</li>
+        <li>de programmes</li>
+      </ul>
+      <li>Évolution du logicielle</li>
+      <li>Migration d'applications</li>
+      <li>Aide à la vérification</li>
+      <li>Traçabilité des transformations</li>
+      <!--li></li-->
+    </ul>
+    </p>
+
+
     <h3>Thèse</h3>
     <p style="text-align:justify">
 
-    <b>Soutenance le vendredi 12 septembre 2014 à 13h30, au Loria, salle C005 (salle du conseil)</b> ; ma thèse est accessible <a href="./these.html">ici</a>.<br/>
+    <b>Soutenance le vendredi 12 septembre 2014 à 13h30, au Loria, salle C005 (salle du conseil)</b> ; ma thèse est accessible <a href="https://tel.archives-ouvertes.fr/tel-01081055v1"><!--a href="./these.html"-->ici</a>.<br/>
     Jury: <ul>
       <li>Rapporteurs :<ul>
         <li>Antoine Beugnard, Telecom Bretagne</li>
-        <li>Laurence Duchien, Université de Lille 1, LIFL</li>
+        <li>Laurence Duchien, Université de Lille 1, LIFL (présidente du jury)</li>
       </ul>
       </li>
       <li>Examinateurs :<ul>
@@ -63,35 +85,34 @@
 
 
 
-    Mon sujet de thèse s'intitule <b>« Transformation de modèles et
-	    certification »</b> et s'inscrit dans dans le cadre du projet <a
-	    href="http://quarteft.loria.fr">Quarteft</a>. Ce projet s'intéresse
-    aux chaînes de développement de systèmes critiques qui reposent sur des
-    langages de modélisation spécifiques au métier ciblé (<i><a
-		    href="http://en.wikipedia.org/wiki/Domain-Specific_Modeling">Domain
-		    Specific Modeling Language</a></i>) et sur des
-    transformations qualifiées (assurance que la transformation préserve lis
-    propriétés d'intérêt) entre languages. Le projet Quarteft vise à développer
-    des technologies pour faciliter cette approche dans le contexte des sytèmes
-    embarqués temps-réel.  Le projet s'appuie d'une part sur la définition de
-    langages pivots dédiés (DSML) et sur l'exploitation de techniques formelles
-    pour spécifier et prouver la correction des transformations. L'étude
-    proposée s'appuie sur le langage <a
-	    href="http://homepages.laas.fr/bernard/fiacre/">FIACRE</a>, un des
-    langages pivots pour la vérification formelle des aspects temps réel dans
-    le projet <a href="http://www.topcased.org">TOPCASED</a> ; il factorise et
-    optimise la chaîne de traduction entre les langages métier tels que <a
-	    href="http://fr.wikipedia.org/wiki/Specification_and_Description_Language">SDL</a>,
-    <a href="http://fr.wikipedia.org/wiki/Aadl">AADL</a>, … et les outils de
-    vérifications de modèles tels que <a
-	    href="http://homepages.laas.fr/bernard/tina/">TINA</a> et <a
-	    href="http://www.inrialpes.fr/vasy/cadp/">CADP</a>. 
+    Mon sujet de thèse s'intitulait <b>« Un îlot formel pour les transformations
+de modèles qualifiables »</b> et s'inscrivait dans dans le cadre du projet <a
+href="http://quarteft.loria.fr">Quarteft</a>. Ce projet s'intéresse aux chaînes
+de développement de systèmes critiques qui reposent sur des langages de
+modélisation spécifiques au métier ciblé (<i><a
+href="http://en.wikipedia.org/wiki/Domain-Specific_Modeling">Domain Specific
+Modeling Language</a></i>) et sur des transformations qualifiées (assurance que
+la transformation préserve lis propriétés d'intérêt) entre languages. Le projet
+Quarteft vise à développer des technologies pour faciliter cette approche dans
+le contexte des sytèmes embarqués temps-réel.  Le projet s'appuie d'une part
+sur la définition de langages pivots dédiés (DSML) et sur l'exploitation de
+techniques formelles pour spécifier et prouver la correction des
+transformations. L'étude proposée s'appuie sur le langage <a
+href="http://homepages.laas.fr/bernard/fiacre/">FIACRE</a>, un des langages
+pivots pour la vérification formelle des aspects temps réel dans le projet <a
+href="http://www.topcased.org">TOPCASED</a> ; il factorise et optimise la
+chaîne de traduction entre les langages métier tels que <a
+href="http://fr.wikipedia.org/wiki/Specification_and_Description_Language">SDL</a>,
+<a href="http://fr.wikipedia.org/wiki/Aadl">AADL</a>, … et les outils de
+vérifications de modèles tels que <a
+href="http://homepages.laas.fr/bernard/tina/">TINA</a> et <a
+href="http://www.inrialpes.fr/vasy/cadp/">CADP</a>. 
 
     <br/>
     <br/>
 
-    Je m'intéresse donc à développer des techniques de spécification et
-    d'implantation des transformations dont les cas d'applications seront des
+    Je me suis donc intéressé à développer des techniques de spécification et
+    d'implantation des transformations dont les cas d'applications étaient des
     extensions de FIACRE (dont RT-FIACRE pour des constructions plus abstraites
     spécifiques au temps réel), en ayant pour objectif de proposer des méthodes
     permettant de valider et de vérifier formellement ces transformations.
@@ -99,26 +120,18 @@
     <br/>
     <br/>
 
-    Pour implanter ces transformations, je propose dans un premier temps
-    d'utiliser le langage <a href="http://tom.loria.fr">Tom</a> couplé à un
-    langage hôte tel que Java, ainsi qu'un framework de modélisation comme <a
-	    href="http://www.eclipse.org/modeling/emf/">EMF</a>. Ensuite, je
-    propose d'étendre le langage pour exprimer facilement ces transformations.
+    Pour implanter ces transformations, j'ai dans un premier temps proposé une
+méthode de transformation par réécriture en utilisant le langage <a
+href="http://tom.loria.fr">Tom</a> couplé à un langage hôte tel que Java, ainsi
+qu'un framework de modélisation comme <a
+href="http://www.eclipse.org/modeling/emf/">EMF</a>. J'ai ensuite étendu le
+langage Tom pour exprimer facilement ces transformations. J'ai créé un îlot
+formel dédié pour exprimer des transformations de modèles. J'ai aussi ajouté
+d'autres îlots formels au sein de Tom pour pour exprimer la traçabilité et pour
+résoudre le problème de l'ordre d'application des règles de réécriture.
 
     </p>
   
-    <p>
-    <b>Thèmes d'intérêt :</b>
-    </p>
-    <ul>
-      <li>Ingénierie du logiciel</li>
-      <li>Langages</li>
-      <li>Transformations, transformations qualifiables</li>
-      <li>Transformations de modèles</li>
-      <li>Traçabilité des transformations</li>
-      <!--li></li-->
-    </ul>
-
 
     <h3>Publications et exposés</h3>
     <p>
