--- a/research.html
+++ b/research.html
@@ -30,7 +30,7 @@
 
     <div id="header">
     <h1>Jean-Christophe Bach</h1>
-      <h4>PhD student - <a href="http://www.loria.fr/la-recherche-en/equipes/pareo">Pareo</a> Team - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.loria.fr">LORIA</a> / <a href="http://www.univ-lorraine.fr">Universit&eacute; de Lorraine</a>: <a href="http://info-fst.dep.univ-lorraine.fr">Computer Science Department</a> of <a href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">FST</a></h4>
+      <h4>Teaching assistant - <a href="http://rmod.lille.inria.fr/">RMoD</a> Team - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.lifl.fr/">LIFL</a> / <a href="http://www.univ-lille1.fr/">University of Lille 1</a>: <a href="http://fil.univ-lille1.fr/">FIL</a>, Computer Science department of <a href="http://ieea.univ-lille1.fr/">IEEA</a></h4>
       <ul id="menu">
         <li><a id="home_menu" href="./index.html">home</a></li>
         <li><a id="research_menu" href="./research.html">research</a></li>
@@ -40,15 +40,38 @@
       </ul>
     </div>
 
+    <h3>Research interests</h3>
+   <p> 
+    <ul>
+      <li>Software engineering</li>
+      <li>Languages</li>
+      <li>Transformations, qualifiable transformations</li>
+      <ul>
+        <li>languages</li>
+        <li>qualifiable</li>
+        <li>models</li>
+        <li>program</li>
+      </ul>
+      <li>Software evolution</li>
+      <li>Software applications migration</li>
+      <li>Help to software verification</li>
+      <li>Transformation traceability</li>
+      <!--li></li-->
+    </ul>
+   
+    </p>
+
+
+
     <h3>Thesis subject</h3>
     <p style="text-align:justify">
 
-    <b>Defense on friday 12th Septembre 2014 at 01:30 pm, Loria, room C005</b> (my thesis can be found <a href="./these.html">here</a>)<br/>
+    <b>Defense on friday 12th Septembre 2014 at 01:30 pm, Loria, room C005</b> (my thesis can be found <a href="https://tel.archives-ouvertes.fr/tel-01081055v1"><!--a href="./these.html"-->here</a>)<br/>
     Jury: <ul>
       <li>Reviewers:
       <ul>
         <li>Antoine Beugnard, Telecom Bretagne</li>
-        <li>Laurence Duchien, Université de Lille 1, LIFL</li>
+        <li>Laurence Duchien, Université de Lille 1, LIFL (president)</li>
       </ul>
       </li>
       <li>Examinators: <ul>
@@ -61,60 +84,50 @@
       </ul></li>
       </ul>
 
-    My PhD subject is <b>« Models transformation and
-	    certification »</b> and is a part of the <a
-	    href="http://quarteft.loria.fr">Quarteft</a> project. This project
-    focuses on critical systems development chains which rely on <a
-		    href="http://en.wikipedia.org/wiki/Domain-Specific_Modeling">Domain
-		    Specific Modeling Language</a> and on qualified
-    transformations (insurance that the transformation preserves thes
-    interesting properties) between languages. The Quarteft project aims to
-    develop technologies to make this approach easier in the real time embedded
-    systems context. On one hand, the project relies on the definition of
-    dedicated intermediate languages (DSML) and on the application of formal
-    methods to specify and to proove the transformations correctness.  The
-    proposed study relies on the <a
-	    href="http://homepages.laas.fr/bernard/fiacre/">FIACRE</a>
-    language, which is one of the intermediate languages for the formal
-    verification of real time aspects in the <a
-	    href="http://www.topcased.org">TOPCASED</a> project; it factorize
-    and optimize the translation chain between languages such as <a
-	    href="http://fr.wikipedia.org/wiki/Specification_and_Description_Language">SDL</a>,
-    <a href="http://fr.wikipedia.org/wiki/Aadl">AADL</a>, … and model checking
-    tools such as <a href="http://homepages.laas.fr/bernard/tina/">TINA</a> and
-    <a href="http://www.inrialpes.fr/vasy/cadp/">CADP</a>. 
+    My PhD subject was entitled <b>« A formal island for qualifiable model
+transformations »</b> and is a part of the <a
+href="http://quarteft.loria.fr">Quarteft</a> project. This project focuses on
+critical systems development chains which rely on <a
+href="http://en.wikipedia.org/wiki/Domain-Specific_Modeling">Domain Specific
+Modeling Language</a> and on qualified transformations (insurance that the
+transformation preserves thes interesting properties) between languages. The
+Quarteft project aims to develop technologies to make this approach easier in
+the real time embedded systems context. On one hand, the project relies on the
+definition of dedicated intermediate languages (DSML) and on the application of
+formal methods to specify and to proove the transformations correctness.  The
+proposed study relies on the <a
+href="http://homepages.laas.fr/bernard/fiacre/">FIACRE</a> language, which is
+one of the intermediate languages for the formal verification of real time
+aspects in the <a href="http://www.topcased.org">TOPCASED</a> project; it
+factorize and optimize the translation chain between languages such as <a
+href="http://fr.wikipedia.org/wiki/Specification_and_Description_Language">SDL</a>,
+<a href="http://fr.wikipedia.org/wiki/Aadl">AADL</a>, … and model checking
+tools such as <a href="http://homepages.laas.fr/bernard/tina/">TINA</a> and <a
+href="http://www.inrialpes.fr/vasy/cadp/">CADP</a>. 
 
     <br/>
     <br/>
 
-    Therefore, I am interested in developping specification and implementation
-    techniques for transformations whose use cases will be extensions of FIACRE
-    (RT-FIACRE for more abstract constructs which are specific to real time).
-    My goal is to propose methods allowing to validate and to verify formally
-    these transformations.
+    Therefore, I was interested in developping specification and implementation
+techniques for transformations whose use cases were extensions of FIACRE
+(RT-FIACRE for more abstract constructs which are specific to real time).  My
+goal was to propose methods allowing to validate and to verify formally these
+transformations.
 
     <br/>
     <br/>
 
-To implement these transformations, I propose to use the <a
-	href="http://tom.loria.fr">Tom</a> language in an host language such as
+To implement these transformations, I proposed a method based on rewriting and
+the <a href="http://tom.loria.fr">Tom</a> language in an host language such as
 Java, and a modeling framework such as <a
-	href="http://www.eclipse.org/modeling/emf/">EMF</a>. Then, I propose to
-extend the Tom language to express easily theses transformations.
+href="http://www.eclipse.org/modeling/emf/">EMF</a>. Then, I extended the Tom
+language to express easily theses transformations. I created a new dedicated
+formal island within Tom to express model transformations. I also added other
+formal islands to express traceability and to solve the problem of the order of
+rewriting rules application.
 
     </p>
 
-    <p>
-    <b>Research interests:</b>
-    </p>
-    <ul>
-      <li>Software engineering</li>
-      <li>Languages</li>
-      <li>Transformations, qualifiable transformations</li>
-      <li>Model transformations</li>
-      <li>Transformation traceability</li>
-      <!--li></li-->
-    </ul>
 
     <h3>Publications and talks</h3>
     <p>
@@ -123,6 +136,7 @@ extend the Tom language to express easily theses transformations.
     <br/>
     List of publications:</p>
     <table>
+
 
 <tr valign="top">
 <td align="right" class="bibtexnumber">
