--- a/teaching-fr.html
+++ b/teaching-fr.html
@@ -30,7 +30,7 @@
 
     <div id="header">
       <h1>Jean-Christophe Bach</h1>
-      <h4>Doctorant - Équipe <a href="http://www.loria.fr/la-recherche/equipes/pareo?set_language=fr">Pareo</a> - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.loria.fr">LORIA</a> / <a href="http://www.univ-lorraine.fr">Universit&eacute; de Lorraine</a> : <a href="http://info-fst.dep.univ-lorraine.fr">département informatique</a> de la <a href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">FST</a></h4>
+      <h4>ATER - Équipe <a href="http://rmod.lille.inria.fr/">RMoD</a> - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.lifl.fr/">LIFL</a> / <a href="http://www.univ-lille1.fr/">Universit&eacute de Lille 1</a>: <a href="http://fil.univ-lille1.fr/">FIL</a>, département informatique de l'UFR <a href="http://ieea.univ-lille1.fr/">IEEA</a></h4>
       <ul id="menu">
         <li><a id="home_menu" href="./index-fr.html">accueil</a></li>
         <li><a id="research_menu" href="./research-fr.html">recherche</a></li>
@@ -44,17 +44,22 @@
       
     </p>
 
-    <p style="text-align:justify"> En parallèle de ma thèse j'enseigne à l'<a
-      href="http://www.univ-lorraine.fr">Université de Lorraine</a> : d'abord à
-    l'<a href="http://www.mines.inpl-nancy.fr">École des Mines de Nancy</a>, et
-    maintenant au <a href="http://info-fst.dep.univ-lorraine.fr"> département
-      informatique</a> de la <a
-      href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">Faculté
-      des Sciences et Technologies</a>. J'interviens dans plusieurs cours, de
-    niveau <a
-      href="http://licence-informatique.formation.univ-lorraine.fr">licence</a>
-    à <a
-      href="http://master-informatique.formation.univ-lorraine.fr">master</a>.
+    <p style="text-align:justify">
+
+En parallèle de ma thèse j'ai enseigné à l'<a
+href="http://www.univ-lorraine.fr">Université de Lorraine</a> : d'abord à l'<a
+href="http://www.mines.inpl-nancy.fr">École des Mines de Nancy</a>, et
+maintenant au <a href="http://info-fst.dep.univ-lorraine.fr"> département
+informatique</a> de la <a
+href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">Faculté
+des Sciences et Technologies</a>. Depuis septembre 2014, j'interviens dans
+plusieurs cours, de niveau <a
+href="http://fil.univ-lille1.fr/licence/">licence</a> à <a
+href="http://fil.univ-lille1.fr/master-informatique/">master</a> au sein du <a
+href="http://fil.univ-lille1.fr/">FIL</a>, le département informatique de l'UFR
+<a href="http://ieea.univ-lille1.fr/">IEEA</a> de l'<a
+href="http://www.univ-lille1.fr/">Universit&eacute de Lille 1</a>. 
+
   </p>
 
   <table width="100%">
@@ -62,6 +67,14 @@
 			  style="width:10%">Niveau</td><td class="textbf2"
 			  style="width:80%">Matière</td></tr>
 
+	  <!--tr><td colspan="3"><a href="http://fil.univ-lille1.fr/">FIL, UFR d'IEEA de l'Université de Lille 1</a>:</td></tr-->
+	  <tr><td class="rotate" rowspan="5"><a href="http://fil.univ-lille1.fr/">FIL</a>, UFR d'<a href="http://ieea.univ-lille1.fr/">IEEA</a> de l'<a href="http://www.univ-lille1.fr/">Universit&eacute de Lille 1</a></td><td class="textbf2">2014-2015</td><td>L1</td><td>Algorithmique et programmation #1 (fondamentaux d'informatique, langage Python)</td></tr>
+	  <tr><td></td><td>L2</td><td>Programmation Orientée Objet</td></tr>
+	  <tr><td></td><td>L3</td><td>Conception Orientée Objet (bonnes pratiques en programmation OO, patrons de conception, tests unitaires, langage Java)</td></tr>
+	  <tr><td></td><td>M1</td><td>Génie Logiciel - Conception Objet Avancée (modélisation et conception d'une application à partir d'un cahier des charges, analyse des besoin, UML)</td></tr>
+	  <tr><td></td><td>M1</td><td>Conception d'architectures réparties</td></tr>
+
+	  <!--tr><td colspan="3"><a href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">Faculté des Sciences et Technologies</a>:</td></tr-->
 	  <tr><td class="rotate" rowspan="7"><a href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">Faculté des Sciences et Technologies</a></td><td class="textbf2">2013-2014</td><td>L1</td><td>Algorithmique et programmation #1 (fondamentaux d'informatique, langage Python)</td></tr>
 	  <tr><td></td><td>L1</td><td>O2I/<a href="http://www.c2i.education.fr">C2I</a> (utilisation de l'ordinateur, des outils de bureautique et d'Internet pour des étudiants non-informaticiens, introduction aux bonnes pratiques de sécurité, identité numérique, données privées vs données publiques, etc.)</td></tr>
 	  <tr><td></td><td>L1</td><td>Méthodologie de conception et programmation C</td></tr>
