--- a/teaching.html
+++ b/teaching.html
@@ -30,7 +30,7 @@
 
     <div id="header">
       <h1>Jean-Christophe Bach</h1>
-      <h4>PhD student - <a href="http://www.loria.fr/la-recherche-en/equipes/pareo">Pareo</a> Team - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.loria.fr">LORIA</a> / <a href="http://www.univ-lorraine.fr">Universit&eacute; de Lorraine</a>: <a href="http://info-fst.dep.univ-lorraine.fr">Computer Science Department</a> of <a href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">FST</a></h4>
+      <h4>Teaching assistant - <a href="http://rmod.lille.inria.fr/">RMoD</a> Team - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.lifl.fr/">LIFL</a> / <a href="http://www.univ-lille1.fr/">University of Lille 1</a>: <a href="http://fil.univ-lille1.fr/">FIL</a>, Computer Science department of <a href="http://ieea.univ-lille1.fr/">IEEA</a></h4>
       <ul id="menu">
         <li><a id="home_menu" href="./index.html">home</a></li>
         <li><a id="research_menu" href="./research.html">research</a></li>
@@ -45,23 +45,37 @@
     </p>
 
     <p style="text-align:justify">
-  During my PhD I also teach at the <a
-    href="http://www.univ-lorraine.fr">Université de Lorraine</a>: first at the
-  <a href="http://www.mines.inpl-nancy.fr">École des Mines in Nancy</a>, and
-  now at the <a href="http://info-fst.dep.univ-lorraine.fr">computer science
-    department</a> of the <a
-    href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">Sciences
-    and Technologies Faculty</a>.
-I teach in several courses, from <a
+
+  During my PhD I taught at the <a
+href="http://www.univ-lorraine.fr">Université de Lorraine</a>: first at the <a
+href="http://www.mines.inpl-nancy.fr">École des Mines in Nancy</a> (2010-2013),
+and then at the <a href="http://info-fst.dep.univ-lorraine.fr">computer science
+department</a> of the <a
+href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">Sciences
+and Technologies Faculty</a> (2013-2014). Since Septembre 2014, I teach in
+several courses, from <a href="http://fil.univ-lille1.fr/licence/">licence</a>
+to <a href="http://fil.univ-lille1.fr/master-informatique/">master</a> at the
+<a href="http://fil.univ-lille1.fr/">FIL</a>, which is the Computer Science
+department of <a href="http://ieea.univ-lille1.fr/">IEEA</a>, a part of <a
+href="http://www.univ-lille1.fr/">University of Lille 1</a>.
+
+ <!--in several courses, from <a
   href="http://licence-informatique.formation.univ-lorraine.fr">licence</a> to
-<a href="http://master-informatique.formation.univ-lorraine.fr">master</a>.
+<a href="http://master-informatique.formation.univ-lorraine.fr">master</a-->
   </p>
 
   <table width="100%">
 	  <tr><td></td><td class="textbf2" style="width:10%">Year</td><td class="textbf2"
 			  style="width:10%">Level</td><td class="textbf2"
 			  style="width:80%">Subject</td></tr>
-	  
+	 
+	  <!--tr><td colspan="3"><a href="http://fil.univ-lille1.fr/">FIL, UFR d'IEEA de l'Université de Lille 1</a>:</td></tr-->
+	  <tr><td class="rotate" rowspan="5"><a href="http://fil.univ-lille1.fr/">FIL</a>, Computer Science department of <a href="http://ieea.univ-lille1.fr/">IEEA</a>, part of <a href="http://www.univ-lille1.fr/">University of Lille 1</a></td><td class="textbf2">2014-2015</td><td>L1</td><td>Algorithmic and programming #1 (basics in computer science, Python language)</td></tr>
+	  <tr><td></td><td>L2</td><td>Object Oriented Programing</td></tr>
+	  <tr><td></td><td>L3</td><td>Object Oriented Design (good practices in OO programming, design patterns, modeling, unit tests, Java language)</td></tr>
+	  <tr><td></td><td>M1</td><td>Software engeneering - Advanced Object Oriented Design (software modeling and design from specifications, requirements analysis, UML)</td></tr>
+	  <tr><td></td><td>M1</td><td>Distributed Architectures Design</td></tr>
+ 
 	  <tr><td class="rotate" rowspan="7"><a href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">Sciences and Technologies Faculty</a></td><td class="textbf2">2013-2014</td><td>L1</td><td>Algorithmic and programming #1 (basics in computer science, Python language)</td></tr>
 	  <tr><td></td><td>L1</td><td>O2I/<a href="http://www.c2i.education.fr">C2I</a> (use of computers, tools and the Internet for non-computer scientist students, introduction to good security practices, digital identity, private data vs public data, etc.)</td></tr>
 	  <tr><td></td><td>L1</td><td>Methodology (designing and programming with C language)</td></tr>
