--- a/index-en.html
+++ b/index-en.html
@@ -43,13 +43,14 @@
     </div>
 
     <table>
-          <tr><td class="textbf">Physical address</td><td>Centre de recherche Inria Nancy-Grand Est, Pareo team</td><td rowspan="8"><img style="float:right border:0" src="images/jcb.jpg" longdesc="A%20photo" width="180" height="178" alt="Jean-Christophe Bach's picture"/></td></tr>
-	  <tr><td class="textbf"></td><td>54600 Villers-lès-Nancy</td></tr>
+          <tr><td class="textbf">Physical address</td><td>Centre de recherche Inria Lille Nord Europe, RMoD team</td><td rowspan="8"><img style="float:right border:0" src="images/jcb.jpg" longdesc="A%20photo" width="180" height="178" alt="Jean-Christophe Bach's picture"/></td></tr>
+	  <tr><td class="textbf"></td><td>40, avenue Halley</td></tr>
+	  <tr><td class="textbf"></td><td>59650 Villeneuve d'Ascq</td></tr>
 	  <tr><td class="textbf"></td><td>France</td></tr>
-	  <tr><td class="textbf">Phone</td><td>(+33) (0)3 54 95 84 05</td></tr>
-	  <tr><td class="textbf">Office</td><td>C307</td></tr>
+	  <tr><td class="textbf">Phone</td><td>(+33) (0)3 59 35 87 38</td></tr>
+	  <tr><td class="textbf">Office</td><td>B302</td></tr>
 	  <!--tr><td class="textbf">Email</td><td> <span class="green">x</span><span class="blue">y</span>.<span class="red">z</span>@{inria,loria}.fr <i>with</i> <span class="green">x</span> &#8594; jean, <span class="blue">y</span> &#8594; christophe and <span class="red">z</span> &#8594; bach</td></tr-->
-	  <tr><td class="textbf">Email</td><td> <span class="green">x</span><span class="blue">y</span>.<span class="red">z</span>@{inria,loria}.fr <i>or</i> <span class="green">x</span>-<span class="blue">y</span>.<span class="red">z</span>@univ-lorraine.fr</td></tr>
+	  <tr><td class="textbf">Email</td><td> <span class="green">x</span><span class="blue">y</span>.<span class="red">z</span>@inria.fr <i>or</i> <span class="green">x</span>-<span class="blue">y</span>.<span class="red">z</span>@univ-lille1.fr</td></tr>
 	  <tr><td class="textbf"></td><td><i>with</i> <span class="green">x</span> &#8594; jean, <span class="blue">y</span> &#8594; christophe and <span class="red">z</span> &#8594; bach</td></tr>
 	  <!--arrow : entity number : &#8594; / entity name : &rarr;-->
 	  <tr><td class="textbf">Public key</td><td><a href="http://pgp.mit.edu:11371/pks/lookup?op=get&amp;search=0x520E0E85EA19F34E">EA19F34E</a> / Fingerprint=A8C3 C208 1C6A 209B DE2A  2D6C 520E 0E85 EA19 F34E</td></tr>
@@ -62,22 +63,39 @@
 
     <p style="text-align:justify">
 
-    Since November 2010, I am a PhD student at <a
-	    href="http://www.loria.fr">LORIA</a> working on models
-    transformations under the supervision of <a
-	    href="http://www.loria.fr/~moreau">Pierre-Étienne Moreau</a> and <a
-	    href="http://www.enseeiht.fr/~pantel">Marc Pantel</a> in the <a
-	    href="http://www.loria.fr/la-recherche-en/equipes/pareo">Pareo</a>
-    team. In the context of my PhD, I am involved in the <a
-	    href="http://quarteft.loria.fr">Quarteft</a> project, funded by <a
-	    href="http://www.fnrae.org">FNRAE</a> (Fondation de Recherche pour
-    l'Aéronautique et l'Espace / Research Foundation for Aeronautics and Space)
+    Since September 2014, I am a teaching assistant (<acronym title="Attaché
+Temporaire d'Enseignement et de Recherche, which stands for Temporary Teaching
+and Researching Assistant">ATER</acronym>) at the <acronym title="Formation
+Informatique de Lille, wich stands for Computer Science Education of
+Lille">FIL</acronym>, the Computer Science departement of IEEA, a part of the
+University of Lille 1. I am a member of the <a
+href="http://rmod.lille.inria.fr/">RMod</a> research group (<a
+href=http://www.inria.fr/">Inria</a>, <a href=http://www.lifl.fr/">LIFL</a>),
+led by <a href="http://stephane.ducasse.free.fr/">Stéphane Ducasse</a>. 
+<br/>
+This contract will end on August 2015, therefore do not hesitate to contact me
+if you have any job proposal related to my scientific and technical interests.
+<br/>
+<br/>
+
+    I defended my PhD on Friday, September 12th 2014. I started it in November
+2010 at <a href="http://www.inria.fr/centre/nancy/">Inria</a> / <a
+href="http://www.loria.fr">LORIA</a> working on model transformations under the
+supervision of <a href="http://www.loria.fr/~moreau">Pierre-Étienne Moreau</a>
+and <a href="http://www.enseeiht.fr/~pantel">Marc Pantel</a> in the <a
+href="http://www.loria.fr/la-recherche-en/equipes/pareo">Pareo</a> research
+group. In the context of my PhD, I was involved in the <a
+href="http://quarteft.loria.fr">Quarteft</a> project, funded by <a
+href="http://www.fnrae.org">FNRAE</a> (Fondation de Recherche pour
+l'Aéronautique et l'Espace / Research Foundation for Aeronautics and Space)
 
     From November 2010 to October 2013, I was funded by <a
-	    href="http://www.inria.fr">Inria</a>. Since November 2013, I have
-    an <acronym title="Attaché Temporaire d'Enseignement et de Recherche, which
-	    stands for Temporary Teaching and Researching
-	    Assistant">ATER</acronym> contract at the <acronym title="Faculté des Sciences et Technologies, which stands for Sciences and Technologies Faculty">FST</acronym> of Université de Lorraine.
+href="http://www.inria.fr">Inria</a>. From November 2013 to August 2014, I had
+an <acronym title="Attaché Temporaire d'Enseignement et de Recherche, which
+stands for Temporary Teaching and Researching Assistant">ATER</acronym>
+contract at the <acronym title="Faculté des Sciences et Technologies, which
+stands for Sciences and Technologies Faculty">FST</acronym> of Université de
+Lorraine.
 
     <br/>
     <br/>
@@ -95,9 +113,6 @@
 	    href="http://tom.loria.fr">Tom</a> compiler as development
     engineer in the <a href="http://www.loria.fr/la-recherche-en/equipes/pareo">Pareo</a> team.
 
-    <br/>
-
-    For the 2014-2015 year, I will have an ATER contract at the university of Lille 1.
     </p>
 
   <!--h3>Research, publications and talks</h3-->
