--- a/index-fr.html
+++ b/index-fr.html
@@ -32,7 +32,7 @@
 
     <div id="header">
     <h1>Jean-Christophe Bach</h1>
-      <h4>Doctorant - Équipe <a href="http://www.loria.fr/la-recherche/equipes/pareo?set_language=fr">Pareo</a> - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.loria.fr">LORIA</a> / <a href="http://www.univ-lorraine.fr">Universit&eacute; de Lorraine</a> : <a href="http://info-fst.dep.univ-lorraine.fr">département informatique</a> de la <a href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">FST</a></h4>
+      <h4>ATER - Équipe <a href="http://rmod.lille.inria.fr/">RMoD</a> - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.lifl.fr/">LIFL</a> / <a href="http://www.univ-lille1.fr/">Universit&eacute de Lille 1</a>: <a href="http://fil.univ-lille1.fr/">FIL</a>, département informatique de l'UFR <a href="http://ieea.univ-lille1.fr/">IEEA</a></h4>
       <ul id="menu">
         <li><a id="home_menu" href="./index-fr.html">accueil</a></li>
         <li><a id="research_menu" href="./research-fr.html">recherche</a></li>
@@ -43,13 +43,14 @@
     </div>
 
     <table>
-          <tr><td class="textbf">Adresse postale</td><td>Centre de recherche Inria Nancy-Grand Est, équipe Pareo</td><td rowspan="8"><img style="float:right border:0" src="images/jcb.jpg" longdesc="A%20photo" width="180" height="178" alt="Photo de Jean-Christophe Bach"/></td></tr>
-	  <tr><td class="textbf"></td><td>54600 Villers-lès-Nancy</td></tr>
+          <tr><td class="textbf">Physical address</td><td>Centre de recherche Inria Lille Nord Europe, RMoD team</td><td rowspan="8"><img style="float:right border:0" src="images/jcb.jpg" longdesc="A%20photo" width="180" height="178" alt="Jean-Christophe Bach's picture"/></td></tr>
+	  <tr><td class="textbf"></td><td>40, avenue Halley</td></tr>
+	  <tr><td class="textbf"></td><td>59650 Villeneuve d'Ascq</td></tr>
 	  <tr><td class="textbf"></td><td>France</td></tr>
-	  <tr><td class="textbf">Téléphone</td><td>(+33) (0)3 54 95 84 05</td></tr>
-	  <tr><td class="textbf">Bureau</td><td>C307</td></tr>
+	  <tr><td class="textbf">Phone</td><td>(+33) (0)3 59 35 87 38</td></tr>
+	  <tr><td class="textbf">Office</td><td>B302</td></tr>
 	  <!--tr><td class="textbf">Courriel</td><td> <span class="green">x</span>.<span class="red">y</span>@inria.fr <i>avec</i> <span class="green">x</span> &#8594; jeanchristophe et <span class="red">y</span> &#8594; bach</td></tr-->
-	  <tr><td class="textbf">Courriel</td><td> <span class="green">x</span><span class="blue">y</span>.<span class="red">z</span>@{inria,loria}.fr <i>ou</i> <span class="green">x</span>-<span class="blue">y</span>.<span class="red">z</span>@univ-lorraine.fr</td></tr>
+	  <tr><td class="textbf">Courriel</td><td> <span class="green">x</span><span class="blue">y</span>.<span class="red">z</span>@inria.fr <i>ou</i> <span class="green">x</span>-<span class="blue">y</span>.<span class="red">z</span>@univ-lille1.fr</td></tr>
 	  <tr><td class="textbf"></td><td><i>avec</i> <span class="green">x</span> &#8594; jean, <span class="blue">y</span> &#8594; christophe et <span class="red">z</span> &#8594; bach</td></tr>
 	  <!--arrow : entity number : &#8594; / entity name : &rarr;-->
 	  <tr><td class="textbf">Clef publique</td><td><a href="http://pgp.mit.edu:11371/pks/lookup?op=get&amp;search=0x520E0E85EA19F34E">EA19F34E</a> / Fingerprint=A8C3 C208 1C6A 209B DE2A  2D6C 520E 0E85 EA19 F34E</td></tr>
@@ -63,23 +64,39 @@
 
     <p style="text-align:justify">
 
-    Depuis novembre 2010, je suis doctorant au <a
-	    href="http://www.loria.fr">LORIA</a> travaillant sur la
-    transformation de modèles sous la supervision de <a
-	    href="http://www.loria.fr/~moreau">Pierre-Étienne Moreau</a> et <a
-	    href="http://www.enseeiht.fr/~pantel">Marc Pantel</a>, dans
-    l'équipe <a
-	    href="http://www.loria.fr/la-recherche/equipes/pareo?set_language=fr">Pareo</a>.
-    Dans le cadre de ma thèse, je suis impliqué dans le projet <a
-	    href="http://quarteft.loria.fr">Quarteft</a>, financé par la <a
-	    href="http://www.fnrae.org">FNRAE</a> (Fondation de Recherche pour
-    l'Aéronautique et l'Espace).
+Depuis septembre 2014, je suis <acronym title="Attaché Temporaire
+d'Enseignement et de Recherche">ATER</acronym> au <a
+href="http://fil.univ-lille1.fr/">FIL</a>, le département informatique de l'UFR
+<a href="http://ieea.univ-lille1.fr/">IEEA</a> de l'<a
+href="http://www.univ-lille1.fr/">Universit&eacute de Lille 1</a>. Je fais
+partie de l'équipe <a href="http://rmod.lille.inria.fr/">RMod</a> (<a
+href=http://www.inria.fr/">Inria</a>, <a href=http://www.lifl.fr/">LIFL</a>),
+dirigée par <a href="http://stephane.ducasse.free.fr/">Stéphane Ducasse</a>.
+<br/>
+Ce contrat se terminant en août 2015, n'hésitez pas à me contacter si
+vous avez des projets ou offres d'emploi en lien avec mes centres d'intérêts
+scientifiques et techniques.
+<br/>
+<br/>
+
+J'ai soutenu ma thèse Le 12 septembre 2014, j'ai soutenu ma thèse commencée en
+novembre 2010. J'étais doctorant au <a href="http://www.loria.fr">LORIA</a>
+travaillant sur la transformation de modèles sous la supervision de <a
+href="http://www.loria.fr/~moreau">Pierre-Étienne Moreau</a> et <a
+href="http://www.enseeiht.fr/~pantel">Marc Pantel</a>, dans l'équipe <a
+href="http://www.loria.fr/la-recherche/equipes/pareo?set_language=fr">Pareo</a>.
+Dans le cadre de ma thèse, j'étais impliqué dans le projet <a
+href="http://quarteft.loria.fr">Quarteft</a>, financé par la <a
+href="http://www.fnrae.org">FNRAE</a> (Fondation de Recherche pour
+l'Aéronautique et l'Espace).
 
     De novembre 2010 à octobre 2013, j'étais financé par l'<a
-      href="http://www.inria.fr">Inria</a>. Depuis novembre 2013, je suis
-    <acronym title="Attaché Temporaire d'Enseignement et de
-      Recherche">ATER</acronym> dans le <a href="http://info-fst.dep.univ-lorraine.fr">département informatique</a> de la <acronym title="Faculté des Sciences et
-      Technologies">FST</acronym> de l'Université de Lorraine.
+href="http://www.inria.fr">Inria</a>. De novembre 2013 à août 2014, j'étais
+<acronym title="Attaché Temporaire d'Enseignement et de
+Recherche">ATER</acronym> dans le <a
+href="http://info-fst.dep.univ-lorraine.fr">département informatique</a> de la
+<acronym title="Faculté des Sciences et Technologies">FST</acronym> de
+l'Université de Lorraine.
 
     <br/>
     <br/>
@@ -97,9 +114,6 @@
 	    href="http://tom.loria.fr">Tom</a> en tant qu'ingénieur dans
     l'équipe <a href="http://www.loria.fr/la-recherche/equipes/pareo?set_language=fr">Pareo</a>.
 
-    <br/>
-
-    Pour l'année 2014-2015, je serai ATER à l'université de Lille 1.
     </p>
 
   <!--h3>Recherche, publications et exposés</h3-->
@@ -118,18 +132,26 @@
 
   <p style="text-align:justify">
   <b>Enseignement :</b><br/>
-  En parallèle de ma thèse j'ai enseigné à l' <a
-    href="http://www.mines.inpl-nancy.fr">École des Mines de Nancy</a> en tant
-  que moniteur (2010-2013). J'enseigne actuellement au sein <a
-    href="http://info-fst.dep.univ-lorraine.fr" >département informatique</a>
-  de la <a
-    href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">Faculté
-    des Sciences et Technologies</a> en tant qu'ATER (2013-2014). Pour plus de
-  détails, vous pouvez vous référer à la <a href="./teaching-fr.html">page
-    suivante</a>.  </p>
+
+  En parallèle de ma thèse j'ai enseigné à l'<a
+href="http://www.mines.inpl-nancy.fr">École des Mines de Nancy</a> en tant que
+moniteur (2010-2013), puis en tant qu'ATER (2013-2014) au sein <a
+href="http://info-fst.dep.univ-lorraine.fr" >département informatique</a> de la
+<a
+href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">Faculté
+des Sciences et Technologies</a>. Je suis actuellement <acronym title="Attaché
+Temporaire d'Enseignement et de Recherche">ATER</acronym> au <acronym
+title="Formation Informatique de Lille">FIL</acronym>, le département
+informatique de l'UFR IEEA de Lille 1.
+<br/>
+Pour plus de détails, vous pouvez vous
+référer à la <a href="./teaching-fr.html">page suivante</a>.
+
+</p>
 
   <!--h3>Divers</h3-->
-  <p style="text-align:justify">
+
+  <!--p style="text-align:justify">
   <b>Divers : </b><br/>
   Je suis élu représentant du collège C (doctorants, ATER, post-doc et
   ingénieurs jeunes diplômés) au conseil du laboratoire. Les conseils ont lieu
@@ -149,11 +171,11 @@
 	  <li>28 février  2014, 14h : un conseil de laboratoire spécifique à l'aménagement dans le cadre du recrutement des enseignants-chercheurs (décharge de service).</li>
 	  <li>15 avril 2014, 10h</li>
 	  <li>27 juin 2014, 14h</li>
-	  <!--li>, 10h</li-->
   </ul>
   Je quitte le laboratoire à la rentrée et je démissionnerai donc de mon mandat. Une nouvelle élection pour le collège C aura lieu en septembre ou octobre. Le représentant restant du collège C est Stéphane Glondu (stephane _dot_ glondu _at_ inria.fr)
   <p style="text-align:justify">
-  <br/>
+  <br/-->
+
   <br/>
   Quelques détails d'activités hors recherche et enseignement sont disponibles sur la <a href="./misc-fr.html">page suivante</a>.
   <br/>
@@ -173,7 +195,7 @@
 	<a href="http://jigsaw.w3.org/css-validator/validator?uri=http://www.loria.fr/~bachjeje/style.css"><img src="images/valid_css.png" style="border:0" alt="Valid CSS"/></a>
       </td-->
       <td style="width:35%" align="right">
-	<i>Dernière modification : 2014-08-18</i>
+	<i>Dernière modification : 2014-12-17</i>
       </td>
     </tr>
   </table>
