--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div id="header">
       <h1>Jean-Christophe Bach</h1>
-      <h4>PhD student - <a href="http://www.loria.fr/equipes/pareo/">Pareo</a> Team - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.loria.fr">LORIA</a> / <a href="http://www.univ-lorraine.fr">Universit&eacute; de Lorraine</a>: <a href="http://info-fst.dep.univ-lorraine.fr">Computer Science Department</a> of <a href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">FST</a></h4>
+      <h4>Teaching assistant - <a href="http://rmod.lille.inria.fr/">RMoD</a> Team - <a href="http://www.inria.fr">Inria</a> / <a href="http://www.lifl.fr/">LIFL</a> / <a href="http://www.univ-lille1.fr/">University of Lille 1</a>: <a href="http://fil.univ-lille1.fr/">FIL</a>, Computer Science department of <a href="http://ieea.univ-lille1.fr/">IEEA</a></h4>
       <ul id="menu">
         <li><a id="home_menu" href="./index.html">home</a></li>
         <li><a id="research_menu" href="./research.html">research</a></li>
@@ -43,13 +43,14 @@
     </div>
 
     <table>
-          <tr><td class="textbf">Physical address</td><td>Centre de recherche Inria Nancy-Grand Est, Pareo team</td><td rowspan="8"><img style="float:right border:0" src="images/jcb.jpg" longdesc="A%20photo" width="180" height="178" alt="Jean-Christophe Bach's picture"/></td></tr>
-	  <tr><td class="textbf"></td><td>54600 Villers-lès-Nancy</td></tr>
+          <tr><td class="textbf">Physical address</td><td>Centre de recherche Inria Lille Nord Europe, RMoD team</td><td rowspan="8"><img style="float:right border:0" src="images/jcb.jpg" longdesc="A%20photo" width="180" height="178" alt="Jean-Christophe Bach's picture"/></td></tr>
+	  <tr><td class="textbf"></td><td>40, avenue Halley</td></tr>
+	  <tr><td class="textbf"></td><td>59650 Villeneuve d'Ascq</td></tr>
 	  <tr><td class="textbf"></td><td>France</td></tr>
-	  <tr><td class="textbf">Phone</td><td>(+33) (0)3 54 95 84 05</td></tr>
-	  <tr><td class="textbf">Office</td><td>C307</td></tr>
+	  <tr><td class="textbf">Phone</td><td>(+33) (0)3 59 35 87 38</td></tr>
+	  <tr><td class="textbf">Office</td><td>B302</td></tr>
 	  <!--tr><td class="textbf">Email</td><td> <span class="green">x</span><span class="blue">y</span>.<span class="red">z</span>@{inria,loria}.fr <i>with</i> <span class="green">x</span> &#8594; jean, <span class="blue">y</span> &#8594; christophe and <span class="red">z</span> &#8594; bach</td></tr-->
-	  <tr><td class="textbf">Email</td><td> <span class="green">x</span><span class="blue">y</span>.<span class="red">z</span>@{inria,loria}.fr <i>or</i> <span class="green">x</span>-<span class="blue">y</span>.<span class="red">z</span>@univ-lorraine.fr</td></tr>
+	  <tr><td class="textbf">Email</td><td> <span class="green">x</span><span class="blue">y</span>.<span class="red">z</span>@inria.fr <i>or</i> <span class="green">x</span>-<span class="blue">y</span>.<span class="red">z</span>@univ-lille1.fr</td></tr>
 	  <tr><td class="textbf"></td><td><i>with</i> <span class="green">x</span> &#8594; jean, <span class="blue">y</span> &#8594; christophe and <span class="red">z</span> &#8594; bach</td></tr>
 	  <!--arrow : entity number : &#8594; / entity name : &rarr;-->
 	  <tr><td class="textbf">Public key</td><td><a href="http://pgp.mit.edu:11371/pks/lookup?op=get&amp;search=0x520E0E85EA19F34E">EA19F34E</a> / Fingerprint=A8C3 C208 1C6A 209B DE2A  2D6C 520E 0E85 EA19 F34E</td></tr>
@@ -62,22 +63,41 @@
 
     <p style="text-align:justify">
 
-    Since November 2010, I am a PhD student at <a
-	    href="http://www.loria.fr">LORIA</a> working on models
-    transformations under the supervision of <a
-	    href="http://www.loria.fr/~moreau">Pierre-Étienne Moreau</a> and <a
-	    href="http://www.enseeiht.fr/~pantel">Marc Pantel</a> in the <a
-	    href="http://www.loria.fr/la-recherche-en/equipes/pareo">Pareo</a>
-    team. In the context of my PhD, I am involved in the <a
-	    href="http://quarteft.loria.fr">Quarteft</a> project, funded by <a
-	    href="http://www.fnrae.org">FNRAE</a> (Fondation de Recherche pour
-    l'Aéronautique et l'Espace / Research Foundation for Aeronautics and Space)
+    Since September 2014, I am a teaching assistant (<acronym title="Attaché
+Temporaire d'Enseignement et de Recherche, which stands for Temporary Teaching
+and Researching Assistant">ATER</acronym>) at the <a
+href="http://fil.univ-lille1.fr/">FIL</a> <!--acronym title="Formation
+Informatique de Lille, wich stands for Computer Science Education of
+Lille">FIL</acronym-->, the Computer Science departement of <a
+href="http://ieea.univ-lille1.fr/">IEEA</a>, a part of the <a
+href="http://www.univ-lille1.fr/">University of Lille 1</a>. I am a member of
+the <a href="http://rmod.lille.inria.fr/">RMoD</a> research group (<a
+href=http://www.inria.fr/">Inria</a>, <a href=http://www.lifl.fr/">LIFL</a>),
+led by <a href="http://stephane.ducasse.free.fr/">Stéphane Ducasse</a>.
+<br/>
+This contract will end on August 2015, therefore do not hesitate to contact me
+if you have any job proposal related to my scientific and technical interests.
+<br/>
+<br/>
+
+    I defended my PhD on Friday, September 12th 2014. I started it in November
+2010 at <a href="http://www.inria.fr/centre/nancy/">Inria</a> / <a
+href="http://www.loria.fr">LORIA</a> working on model transformations under the
+supervision of <a href="http://www.loria.fr/~moreau">Pierre-Étienne Moreau</a>
+and <a href="http://www.enseeiht.fr/~pantel">Marc Pantel</a> in the <a
+href="http://www.loria.fr/la-recherche-en/equipes/pareo">Pareo</a> research
+group. In the context of my PhD, I was involved in the <a
+href="http://quarteft.loria.fr">Quarteft</a> project, funded by <a
+href="http://www.fnrae.org">FNRAE</a> (Fondation de Recherche pour
+l'Aéronautique et l'Espace / Research Foundation for Aeronautics and Space)
 
     From November 2010 to October 2013, I was funded by <a
-	    href="http://www.inria.fr">Inria</a>. Since November 2013, I have
-    an <acronym title="Attaché Temporaire d'Enseignement et de Recherche, which
-	    stands for Temporary Teaching and Researching
-	    Assistant">ATER</acronym> contract at the <acronym title="Faculté des Sciences et Technologies, which stands for Sciences and Technologies Faculty">FST</acronym> of Université de Lorraine.
+href="http://www.inria.fr">Inria</a>. From November 2013 to August 2014, I had
+an <acronym title="Attaché Temporaire d'Enseignement et de Recherche, which
+stands for Temporary Teaching and Researching Assistant">ATER</acronym>
+contract at the <acronym title="Faculté des Sciences et Technologies, which
+stands for Sciences and Technologies Faculty">FST</acronym> of Université de
+Lorraine.
 
     <br/>
     <br/>
@@ -95,9 +115,6 @@
 	    href="http://tom.loria.fr">Tom</a> compiler as development
     engineer in the <a href="http://www.loria.fr/la-recherche-en/equipes/pareo">Pareo</a> team.
 
-    <br/>
-
-    For the 2014-2015 year, I will have an ATER contract at the university of Lille 1.
     </p>
 
   <!--h3>Research, publications and talks</h3-->
@@ -116,20 +133,29 @@
 
   <p style="text-align:justify">
   <b>Teaching:</b><br/>
+
   In addition to my PhD I taught at the <a
-    href="http://www.mines.inpl-nancy.fr">École des Mines in Nancy</a> as
-  teaching assistant (2010-2013). I currently teach at the <a
-    href="http://info-fst.dep.univ-lorraine.fr" >computer science
-    department</a> of <a
-    href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">Sciences
-    and Technologies Faculty</a> as <acronym title="Attaché Temporaire
-    d'Enseignement et de Recherche, which stands for Temporary Teaching and
-    Researching Assistant">ATER</acronym> (2013-2014). For detailed
+href="http://www.mines.inpl-nancy.fr">École des Mines in Nancy</a> as teaching
+assistant (2010-2013), then at the <a
+href="http://info-fst.dep.univ-lorraine.fr" >computer science department</a> of
+<a
+href="http://www.univ-lorraine.fr/content/faculté-des-sciences-et-technologies">Sciences
+and Technologies Faculty</a> as <acronym title="Attaché Temporaire
+d'Enseignement et de Recherche, which stands for Temporary Teaching and
+Researching Assistant">ATER</acronym> (2013-2014). Currently I am a teaching
+assistant (<acronym title="Attaché Temporaire d'Enseignement et de Recherche,
+which stands for Temporary Teaching and Researching Assistant">ATER</acronym>)
+at the <acronym title="Formation Informatique de Lille, wich stands for
+Computer Science Education of Lille">FIL</acronym>, the Computer Science
+departement of IEEA, a part of the University of Lille 1.
+
+<br/>
+For detailed
   information, please see <a href="./teaching.html">this page</a>.
   </p>
 
   <!--h4>Misc</h4-->
-  <p style="text-align:justify">
+  <!--p style="text-align:justify">
   <b>Misc:</b><br/>
   I have been elected to represent PhD students, temporary researchers and
   engineers within the laboratory council. There is a meeting once every two
@@ -149,11 +175,11 @@
 	<li>February, 28th 2014 at 2.00pm: a special laboratory council meeting dedicated to organization when hiring a professor assistant.</li>
 	<li>April, 15th 2014 at 10.00am</li>
 	<li>June, 27th 2014 at 2.00pm</li>
-	<!--li></li-->
 </ul>
 I leave the laboratory, therefore I will resign. A new election will stand in Sebtember or October and the remaining representative is Stéphane Glondu (stephane _dot_ glondu _at_ inria.fr).
   <p style="text-align:justify">
-  <br/>
+  <br/-->
+
   <br/>
   Apart my research and teaching, I have interest in other activities as detailed on the <a href="./misc.html">following page</a>.
   <br/>
@@ -172,7 +198,7 @@ I leave the laboratory, therefore I will resign. A new election will stand in Se
 	<a href="http://jigsaw.w3.org/css-validator/validator?uri=http://www.loria.fr/~bachjeje/style.css"><img src="images/valid_css.png" style="border:0" alt="Valid CSS"/></a>
       </td-->
       <td style="width:35%" align="right">
-	<i>Last modification: 2014-08-18</i>
+	<i>Last modification: 2014-12-17</i>
       </td>
     </tr>
   </table>
